terraform/custom-vpc.tf
resource "aws_vpc" "custom-vpc" {

        cidr_block = "10.10.0.0/16"
        tags = {
                Name = "custom-vpc"
        }
}
